# the-village-service

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.development  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  logging.ini  pyproject.toml
.github/: build-tests.yml
.github/workflows/: build-tests.yml
alembic/: env.py
alembic/versions/: add04d2b2bc4_create_user_schema.py  b13b7f6a65e5_create_post_schema.py  c98fc2b63183_create_comment_schema.py
app/: backend_pre_start.py  initial_data.py  main.py
app/api/: deps.py  routes.py
app/api/v1/: admin.py  auth.py  comment.py  post.py  response_helper.py  user.py
app/controller/: __init__.py  admin_controller.py  base.py  comment_controller.py  post_controller.py  user_controller.py
app/core/: authentication.py  config.py  exception_handler.py  init_logger.py  security.py  settings.py
app/core/provider/: __init__.py  http_auth_provider.py  previledge_checker.py  role_checker.py
app/crud/: base.py  crud_user.py
app/db/: base.py  init_db.py  session.py
app/models/: comment.py  post.py  user.py
app/schemas/: __init__.py  base.py  comment.py  common.py  post.py  user.py
app/tests/: __init__.py  conftest.py  factories.py  utils.py
app/tests/api/: test_admin.py  test_auth.py  test_comment.py  test_hello_world.py  test_post.py  test_user.py
app/tests/utils/: base_factory.py  helper.py  overrides.py  test_db.py
scripts/: dev.sh  prestart.sh  prod.sh  test.sh  testcov.sh
