[tool.poetry]
name = "the-village-service"
version = "0.1.0"
description = "Backend service for the village project"
authors = ["oyinda-subair <oyinda.subair@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "~0.18.3"
fastapi = "~0.81.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "^1.10.1"}
Jinja2 = "~3.0.1"
SQLAlchemy = "~1.4.40"
alembic = "~1.8.1"
tenacity = "~8.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
httpx = "^0.23.0"
psycopg2 = "^2.9.3"
python-json-logger = "^2.0.4"
loguru = "^0.6.0"
SQLAlchemy-Utils = "^0.38.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.1"
pylint = "^2.15.0"
autopep8 = "^1.7.0"
pytest-factoryboy = "^2.5.0"
coverage = {extras = ["toml"], version = "^6.5.0"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 30

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
